# time_table

./: alembic.ini  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 12d5f4e3cfe9_added_tables.py  326766cb91d4_added_all_tables.py  606a9a9af5ab_refactoring.py  6aa438bbdce9_change_relationship_course_with_student.py
db/: __init__.py  fetchers.py  models.py  services.py
db/fetchers/: base.py  course.py  mark_table.py  student.py  subject.py
server/: __main__.py  models.py  settings.py
server/routers/: course.py  mark_table.py  student.py  subject.py
server/templates/: course.html  course_list.html  course_new.html  index.html  record_new.html  student.html  student_list.html  student_new.html  subject.html  subject_list.html  subject_new.html
